fix: filters and navbar wrapping

--- a/src/components/ActiveFilters/ActiveFilters.module.scss
+++ b/src/components/ActiveFilters/ActiveFilters.module.scss
@@ -3,6 +3,7 @@
 	align-items: center;
 	gap: 8px;
 	padding: var(--s-5);
+	flex-wrap: wrap;
 }
 
 .filter {
